@startuml

abstract class AbstractSurfaceFitter
abstract class AbstractPerExpirySurfaceFitter
abstract class AbstractSVICalibrator
class UnconstrainedQuasiExplicitSVICalibrator
class SVISurfaceFitter
class MidMarketSurfaceFitter

AbstractSurfaceFitter <|-- AbstractPerExpirySurfaceFitter
AbstractSVICalibrator <|-- UnconstrainedQuasiExplicitSVICalibrator
AbstractPerExpirySurfaceFitter <|-- SVISurfaceFitter
SVISurfaceFitter o-- AbstractSVICalibrator
AbstractPerExpirySurfaceFitter <|-- MidMarketSurfaceFitter

@enduml